feat: seat and ticket controller/service/repository